kubernetes/applications/alloy/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: alloy-ui
  namespace: alloy
  annotations:
    # ExternalDNS configuration for Cloudflare
    external-dns.alpha.kubernetes.io/target: udm-pro.zimmermann.sh
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    kubernetes.io/ingress.class: traefik
    # Homepage Service Discovery
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Observability"
    gethomepage.dev/name: "Alloy"
    gethomepage.dev/icon: "alloy.png"
    gethomepage.dev/weight: "4"
    gethomepage.dev/href: "https://PLACEHOLDER"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=alloy-alloy-metrics"

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER`)
      priority: 10
      middlewares:
        - name: chain-mfa-auth
          namespace: ingress-controller
      services:
        - kind: Service
          name: alloy-alloy-metrics
          port: 12345
  tls:
    secretName: alloy-ui-tls
